--- a/Prueba_HTML.html
+++ b/Prueba_HTML.html
@@ -7,73 +7,80 @@ Connection: close
 <!DOCTYPE HTML><html><head>
   <html lang="es" dir="ltr">
   <head>
+<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 
   <title>Identificador</title>
 
-  <body>
-
-
-</html>
-<body
+  <body style="background-color:#343a40;">
 
 <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\"></head>
 
 <h1 style=\"width:500px;height:20px;color:#33285e;\"> Mi programa serio esp32 </h1>
 
+<div class="flex w-full h-full justify-center content-center items-center">
 
 <table>
 <tr>
-<td><p style=\"color:#14c923\">LED #1 </p>
-  <td><a href=\"on1\"><button>ON</button></a>&nbsp;<a href=\"off1\"><button>OFF</button></a></td></td>
-  <td><p style=\"color:#14c923\">LED #2 </p>
-    <td><a href=\"on1\"><button>ON</button></a>&nbsp;<a href=\"off1\"><button>OFF</button></a></td></td>
+<td><p> SALIDA #1  </p>
+  <td><a href=\"on1\"><button class="rounded bg-green-500 hover:bg-green-700 py-2 px-4 text-white">ON</button></a>&nbsp;
+    <a href=\"off1\"><button class="rounded bg-red-500 hover:bg-red-700 py-2 px-4 text-white">OFF</button></a></td></td>
+  <td><p>SALIDA #2 </p>
+    <td><a href=\"on1\"><button class="rounded bg-green-500 hover:bg-green-700 py-2 px-4 text-white" >ON</button></a>&nbsp;
+      <a href=\"off1\"><button class="rounded bg-red-500 hover:bg-red-700 py-2 px-4 text-white">OFF</button></a></td></td>
+    </tr>
+<tr>
+</tr>
 
+<tr>
+<td><p>SALIDA#3 </p>
+<td><a href=\"on1\"><button class="rounded bg-green-500 hover:bg-green-700 py-2 px-4 text-white">ON</button></a>&nbsp;
+  <a href=\"off1\"><button class="rounded bg-red-500 hover:bg-red-700 py-2 px-4 text-white">OFF</button></a></td></td>
+<td><p>SALIDA #4 </p>
+  <td><a href=\"on1\"><button class="rounded bg-green-500 hover:bg-green-700 py-2 px-4 text-white">ON</button>
+  </a>&nbsp;<a href=\"off1\"><button class="rounded bg-red-500 hover:bg-red-700 py-2 px-4 text-white">OFF</button></a></td></td>
+</tr>
+
+<tr>
+<td><p> SALIDA #5  </p>
+  <td><a href=\"on1\"><button class="rounded bg-green-500 hover:bg-green-700 py-2 px-4 text-white">ON</button></a>&nbsp;
+    <a href=\"off1\"><button class="rounded bg-red-500 hover:bg-red-700 py-2 px-4 text-white">OFF</button></a></td></td>
+  <td><p>SALIDA #6 </p>
+    <td><a href=\"on1\"><button class="rounded bg-green-500 hover:bg-green-700 py-2 px-4 text-white" >ON</button></a>&nbsp;
+      <a href=\"off1\"><button class="rounded bg-red-500 hover:bg-red-700 py-2 px-4 text-white">OFF</button></a></td></td>
+</tr>
+<tr>
+</tr>
+
+<tr>
+<td><p>SALIDA #7 </p>
+<td><a href=\"on1\"><button class="rounded bg-green-500 hover:bg-green-700 py-2 px-4 text-white">ON</button></a>&nbsp;
+  <a href=\"off1\"><button class="rounded bg-red-500 hover:bg-red-700 py-2 px-4 text-white">OFF</button></a></td></td>
+<td><p>SALIDA #8 </p>
+  <td><a href=\"on1\"><button class="rounded bg-green-500 hover:bg-green-700 py-2 px-4 text-white">ON</button>
+  </a>&nbsp;<a href=\"off1\"><button class="rounded bg-red-500 hover:bg-red-700 py-2 px-4 text-white">OFF</button></a></td></td>
+</tr>
+
+<tr>
+<td><p> SALIDA #9  </p>
+  <td><a href=\"on1\"><button class="rounded bg-green-500 hover:bg-green-700 py-2 px-4 text-white">ON</button></a>&nbsp;
+    <a href=\"off1\"><button class="rounded bg-red-500 hover:bg-red-700 py-2 px-4 text-white">OFF</button></a></td></td>
+  <td><p>SALIDA #10 </p>
+    <td><a href=\"on1\"><button class="rounded bg-green-500 hover:bg-green-700 py-2 px-4 text-white" >ON</button></a>&nbsp;
+      <a href=\"off1\"><button class="rounded bg-red-500 hover:bg-red-700 py-2 px-4 text-white">OFF</button></a></td></td>
 
 </tr>
 <tr>
 </tr>
 <tr>
-<td><p style=\"color:#14c923\">LED #3 </p>
-
-<td><a href=\"on1\"><button>ON</button></a>&nbsp;<a href=\"off1\"><button>OFF</button></a></td></td>
-<td><p style=\"color:#14c923\">LED #4 </p>
-  <td><a href=\"on1\"><button>ON</button></a>&nbsp;<a href=\"off1\"><button>OFF</button></a></td></td>
-</tr>
-
-<tr>
-  <td><p style=\"color:#14c923\">LED #5" </p>
-    <td><a href=\"on1\"><button>ON</button></a>&nbsp;<a href=\"off1\"><button>OFF</button></a></td></td>
-    <td><p style=\"color:#14c923\">LED #6" </p>
-      <td><a href=\"on1\"><button>ON</button></a>&nbsp;<a href=\"off1\"><button>OFF</button></a></td></td>
-
-</tr>
-
-
-<tr>
-  <td><p style=\"color:#14c923\">LED #7" </p>
-    <td><a href=\"on1\"><button>ON</button></a>&nbsp;<a href=\"off1\"><button>OFF</button></a></td></td>
-    <td><p style=\"color:#14c923\">LED #8" </p>
-      <td><a href=\"on1\"><button>ON</button></a>&nbsp;<a href=\"off1\"><button>OFF</button></a></td></td>
-
-</tr>
-
-<tr>
-  <td><p style=\"color:#14c923\">LED #9" </p>
-    <td><a href=\"on1\"><button>ON</button></a>&nbsp;<a href=\"off1\"><button>OFF</button></a></td></td>
-    <td><p style=\"color:#14c923\">LED #10" </p>
-      <td><a href=\"on1\"><button>ON</button></a>&nbsp;<a href=\"off1\"><button>OFF</button></a></td></td>
-
-</tr>
-
-
-<tr>
-  <td><p style=\"color:#14c923\">LED #11" </p>
-    <td><a href=\"on1\"><button>ON</button></a>&nbsp;<a href=\"off1\"><button>OFF</button></a></td></td>
-    <td><p style=\"color:#14c923\">LED #12" </p>
-      <td><a href=\"on1\"><button>ON</button></a>&nbsp;<a href=\"off1\"><button>OFF</button></a></td></td>
-
+<td><p>SALIDA #11 </p>
+<td><a href=\"on1\"><button class="rounded bg-green-500 hover:bg-green-700 py-2 px-4 text-white">ON</button></a>&nbsp;
+  <a href=\"off1\"><button class="rounded bg-red-500 hover:bg-red-700 py-2 px-4 text-white">OFF</button></a></td></td>
+<td><p>SALIDA #12 </p>
+  <td><a href=\"on1\"><button class="rounded bg-green-500 hover:bg-green-700 py-2 px-4 text-white">ON</button>
+  </a>&nbsp;<a href=\"off1\"><button class="rounded bg-red-500 hover:bg-red-700 py-2 px-4 text-white">OFF</button></a></td></td>
 </tr>
 </table>
+</div>
 <div>
 </body>
   </head>
